# embedded-exercises-solutions

./: INSTALLATION.md  README.md
.github/workflows/: rust.yml
bonus_exercise_1_a_little_rust_in_cpp/: rust_calculator.cpp
bonus_exercise_1_a_little_rust_in_cpp/rust_calculator/src/: lib.rs
bonus_exercise_1_a_little_rust_in_cpp_solution/: .gitignore  CMakeLists.txt  cpp_calculator.h  main.cpp  readme.md  rust_calculator.cpp  rust_calculator.h
bonus_exercise_1_a_little_rust_in_cpp_solution/rust_calculator/: Cargo.toml
bonus_exercise_2_a_little_cpp_in_rust/c_calculator/: c_calculator.c  c_calculator.h
bonus_exercise_2_a_little_cpp_in_rust/src/: c_calculator.rs  cpp_calculator.rs  main.rs
bonus_exercise_2_a_little_cpp_in_rust_solution/: build.rs  readme.md
bonus_exercise_2_a_little_cpp_in_rust_solution/cpp_calculator/: cpp_calculator_wrapper.h
esp-rs-std-display-sol/: README.MD
esp-rs-std-display-sol/core-application/: Cargo.toml
esp-rs-std-display-sol/esp32-s1/: Cargo.toml
exercise_1_a_little_rust_in_cpp_solution/: cpp_calculator.cpp  readme.md
exercise_1_heapless/: README.md
exercise_1_heapless/src/: a_ints.rs  lib.rs
exercise_2_a_little_cpp_in_rust_solution/: Cargo.toml  readme.md
exercise_2_a_little_cpp_in_rust_solution/c_calculator/: c_calculator.cpp  c_calculator.h
exercise_2_a_little_cpp_in_rust_solution/src/: calculator.rs
exercise_2_hello_embedded/: Cargo.toml  README.md
exercise_2_hello_embedded/src/: main.rs
exercise_3_embedded_graphics/: README.MD
exercise_3_embedded_graphics/core-application/src/: lib.rs
exercise_3_embedded_graphics/esp32-s1/src/: main.rs
exercise_3_embedded_graphics_solution/: .gitignore  README.MD
exercise_3_embedded_graphics_solution/core-application/src/: lib.rs
exercise_3_embedded_graphics_solution/desktop/: Cargo.toml
exercise_3_embedded_graphics_solution/esp32-s1/: Cargo.toml
exercise_3_embedded_graphics_solution/esp32-s1/src/: main.rs
exercise_3_heapless/: Cargo.toml
exercise_3_heapless/src/: a_ints.rs  b_strings.rs
exercise_4_embedded_graphics_solution/desktop/src/: main.rs
exercise_4_to_async_or_not_async/: Cargo.toml
exercise_4_to_async_or_not_async/src/: main.rs
mqtt-challenge/desktop/src/: main.rs
mqtt-challenge/esp32/: Cargo.toml
mqtt-challenge/esp32/src/: main.rs  writers.rs
mqtt-challenge/esp32/src/writers/: mqtt_writer.rs
mqtt-challenge/mqtt-core/src/: lib.rs
mqtt-challenge/mqtt-core/src/writers/: MqttWriter.rs
mqtt-challenge/src/: main.rs
optional_exercise_a_little_cpp_in_rust_solution/: build.rs
optional_exercise_a_little_cpp_in_rust_solution/cpp_calculator/: cpp_calculator.cpp  cpp_calculator.h  cpp_calculator_wrapper.cpp
optional_exercise_a_little_cpp_in_rust_solution/src/: c_calculator.rs  cpp_calculator.rs  main.rs  rust_calculator.rs
optional_exercise_a_little_rust_in_cpp_solution/: CMakeLists.txt  ICalculator.h
optional_exercise_a_little_rust_in_cpp_solution/rust_calculator/src/: lib.rs
rust_stm32_blinky_example/: CMakeLists.txt
rust_stm32_blinky_example/Core/Inc/: main.h
rust_stm32_blinky_example/Core/Src/: main.c
rust_stm32_blinky_example/rust_lib/: Cargo.toml  memory.x
rust_stm32_embassy_example/: README.md
rust_stm32_embassy_example/playground/: Cargo.toml  Embed.toml  rust-toolchain.toml
rust_stm32_embassy_example/playground/.cargo/: config.toml
rust_with_c_stm32_blinky_example/: blinky.ioc  readme.md
rust_with_c_stm32_blinky_example/rust_lib/src/: lib.rs
