[package]
name = "exercise-4-to-async-or-not-async"
version = "0.1.0"
authors = ["Jeroen Jansen <jeroen.jansen@alten.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32", "embassy", "embassy-time-timg0", "embassy-executor-thread", "embassy-executor-interrupt" , "async"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embassy-executor    = { version = "0.5.0", features = ["nightly", "integrated-timers"] }
embassy-sync        = "0.5.0"
embassy-time        = "0.3.0"
embassy-time-driver = { version = "0.1.0", optional = true }
embedded-hal        = "1.0.0"
embedded-hal-02     = { version = "0.2.7", package = "embedded-hal" }
embedded-hal-async  = "1.0.0"
embedded-hal-bus    = "0.1.0"
embedded-io-async   = "0.6.1"        

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
