[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
core-application = { path = "../core-application" }
chrono = "0.4.26"
embedded-graphics = "0.8.0"
embedded-graphics-simulator = "0.5.0"
embedded-text = "0.6.0"
tinybmp = "0.5.0"
tinytga = "0.5.0"
